# wikiembeddings

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  Dockerfile  FACTS.txt  LICENSE  PRD.md  README.md  TICKETS.md  docker-compose.yaml  pyproject.toml  wiki_titles.txt.stub  wikititles.py
.github/workflows/: ci.yaml  release.yaml
app/: __init__.py  build_index.py  config.py  main.py
k8s/: configmap.yaml  deployment.yaml  pv.yaml  pvc.yaml
sdlc/: DEVELOPMENT_RULES.md  PRD.md  TICKETS.md
sdlc/tickets/: T21.md  T22.md  T23.md  T24.md
tests/: conftest.py  test_build_config.py  test_build_coverage_gaps.py  test_build_download.py  test_build_embed.py  test_build_faiss.py  test_build_run.py  test_config.py  test_faiss_roundtrip.py  test_health_endpoint.py  test_lifespan.py  test_logging_config.py  test_main_lifespan.py  test_model_encode.py  test_nprobe_fallback.py  test_search_unit.py  test_validate_path.py  test_validation.py  test_verify_faiss_installed.py
tests/integration/: test_auto_build.py  test_search_e2e.py  test_search_quality.py
