[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-semantic-search"
version = "0.1.0"
description = "Wikipedia Semantic Search Microservice — vector similarity over ~5\u201310M English titles via FAISS + sentence-transformers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "coverage[toml]>=7.4.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

# ── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["**/tests/**", "**/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
